--- a/flask_app/pyproject.toml
+++ b/flask_app/pyproject.toml
@@ -25,6 +25,7 @@ pyopenssl = "^24.2.1"
 flask-cors = "^5.0.0"
 plotly = "^5.24.1"
 pandas = "^2.2.3"
+python-dotenv = "^1.0.1"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.2"
